UV: Pivot set to Individual Origins does not work properly w/ sync-select & edge selection #79304

Closed
opened 2020-07-27 04:51:03 +02:00 by Jesse Yurkovich · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-07-25 19:01, hash: 13abacaaf3
Broken: version: 2.79 is also broken
Worked: n/A

Short description of error
It seems like Individual Origins does not work in the UV editor like it does for Meshes. The result of the operation will change significantly if edges share a common neighbhoring edge vs. if they do not.

For context I was attempting to quickly/easily create square UV's for a particular model and ran into the problem.

Baseline setup:
baseline.png

Good Example - Mesh, Scale - X - 0:
mesh_scale-0.png

Bug Example - UV, Scale - X - 0:
uv_scale-0.png

Good Example - Mesh, Scale - X - 0 -- non neighboring:
mesh_scale-0_non.png

Good Example - UV, Scale - X - 0 -- non neighboring:
uv_scale-0_non.png

Exact steps for others to reproduce the error
uv-indivorigin.blend

  • Load attached .blend
  • Ensure pivots are set to Individual Origins
  • Try to align edges on X or Y axis in the UV editor for example
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-07-25 19:01, hash: `13abacaaf3` Broken: version: 2.79 is also broken Worked: n/A **Short description of error** It seems like Individual Origins does not work in the UV editor like it does for Meshes. The result of the operation will change significantly if edges share a common neighbhoring edge vs. if they do not. For context I was attempting to quickly/easily create square UV's for a particular model and ran into the problem. Baseline setup: ![baseline.png](https://archive.blender.org/developer/F8722102/baseline.png) Good Example - Mesh, Scale - X - 0: ![mesh_scale-0.png](https://archive.blender.org/developer/F8722106/mesh_scale-0.png) Bug Example - UV, Scale - X - 0: ![uv_scale-0.png](https://archive.blender.org/developer/F8722108/uv_scale-0.png) Good Example - Mesh, Scale - X - 0 -- non neighboring: ![mesh_scale-0_non.png](https://archive.blender.org/developer/F8722110/mesh_scale-0_non.png) Good Example - UV, Scale - X - 0 -- non neighboring: ![uv_scale-0_non.png](https://archive.blender.org/developer/F8722113/uv_scale-0_non.png) **Exact steps for others to reproduce the error** [uv-indivorigin.blend](https://archive.blender.org/developer/F8722117/uv-indivorigin.blend) - Load attached .blend - Ensure pivots are set to Individual Origins - Try to align edges on X or Y axis in the UV editor for example
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This behavior was even worse. See #72325

The dedicated UV selection does not differentiate between the selection of edges and vertices.
But in this case it is using Mesh's selection system.

It should be supported, so..., confirming as a BUG.

This behavior was even worse. See #72325 The dedicated UV selection does not differentiate between the selection of edges and vertices. But in this case it is using Mesh's selection system. It should be supported, so..., confirming as a BUG.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Looked into this, current UV-island logic doesn't take edge selection into account,
and it doesn't look like a small change to support it.

I'd rather rewrite this to use bmesh-connectivity information which will make supporting this case quite simple.

Setting this as a TODO

Looked into this, current UV-island logic doesn't take edge selection into account, and it doesn't look like a small change to support it. I'd rather rewrite this to use bmesh-connectivity information which will make supporting this case quite simple. Setting this as a TODO
Campbell Barton changed title from UV: Pivot set to Individual Origins does not work in some instances to UV: Pivot set to Individual Origins does not work properly w/ sync-select & edge selection 2020-08-05 07:59:40 +02:00
Chris Blackbourn self-assigned this 2022-06-30 00:16:06 +02:00

This issue was referenced by 178868cf42

This issue was referenced by 178868cf42594bf7eedfa4db93ba8b7f3bf017ce

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79304
No description provided.