Fix T79304: improve uv island calculation when in edge selection mode

Differential Revision: https://developer.blender.org/D15419